# dio-python-fundamentals

./: README.md  log.txt
.txt/: arquivo-utf-8.txt  lorem.txt
00 - Fundamentos/: identacao_blocos.py  print_input.py  variaveis_constantes.py
01 - Fundamentos/: print_input.py
02 - Estrutura de dados/1_Listas/: 00_declarando_listas.py  01_acesso_direto.py  02_matriz.py  04_iterar_listas.py  05_compreesao_de_listas.py  06_append.py  07_clear.py  08_copy.py  09_count.py  10_extend.py  11_index.py  12_pop.py  13_remove.py  15_sort.py  17_sorted.py
02 - Estrutura de dados/2_Tuplas/: 00_conhecendo_tuplas.py  01_acesso_direto.py  02_indices_negativos.py  05_iterar_tuplas.py  06_count.py  07_index.py  08_len.py
02 - Estrutura de dados/3_conjuntos/: 00_declarando_conjuntos.py  (+11 more)
04 - Decoradores/: 00_decoradores.py  01_decorador_com_argumento.py  02_decorador_retorna_valor.py  03_decorador_introspeccao.py  decoradores_hello_world_acucar_sintatico.py  greet_decorador.py
05 - Iteradores/: 02_iterador_exemplo.py
05_iteradores/: 01_file_iterator.py
06 - Data e Hora/: 00_exemplo.py  02_timedelta.py  03_formatando_datas.py  04_timezone.py
07 - Manipulando Arquivos/: 00_lendo_arquivos.py  01_escrevendo_arquivos.py
07_manipulando_arquivos/: 00_lendo_arquivos.py  03_os_shutil.py  04_tratamento_excecao.py  05_boas_praticas.py  06_arquivos_csv.py
08 - Banco De Dados/: 00_connect_db.py  01_sql_injection.py  02_gerenciando_db.py  meu_banco.db  tempCodeRunnerFile.py
09 - Desenvolvimento de API com flask/: app.py  pyproject.toml
Desafios/: desafio.py  tempCodeRunnerFile.py
(+47 files in other folders)
